--- a/vercel.json
+++ b/vercel.json
@@ -1,4 +1,19 @@
 {
   "version": 2,
-  "public": true
+  "public": true,
+  "functions": {
+    "api/*.js": {
+      "runtime": "nodejs18.x"
+    }
+  },
+  "rewrites": [
+    {
+      "source": "/api/(.*)",
+      "destination": "/api/$1"
+    },
+    {
+      "source": "/((?!.*\\.).*)$",
+      "destination": "/index.html"
+    }
+  ]
 }
